@@ -1,3 +1,8 @@
+2007-05-04  Frederic Peters  <fpeters@0d.be>
+
+	* jhbuild/modtypes/autotools.py: adds support for autoreconf, patch by
+	Guillaume Desmottes from Sugar (closes: #435772).
+
 2007-05-03  Frederic Peters  <fpeters@0d.be>
 
 	* jhbuild/modtypes/tarball.py: also look for patches in moduleset
